[package]
name = "cyberhack"
version = "0.1.0"
edition = "2021"

[lib]
# Это критически важно: сообщает компилятору, что нужно создать 
# динамическую C-совместимую библиотеку для WASM.
crate_type = ["cdylib", "rlib"]

[dependencies]
yew = { version = "0.21.0", features = ["csr"] }
rand = "0.8"
getrandom = { version = "0.2", features = ["js"] }
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# Обновил до актуальной версии для совместимости
gloo-timers = "0.3.0" 

[dependencies.web-sys]
version = "0.3"
features = [
  "Window", 
  "Document", 
  "Location", 
  "Element", 
  "HtmlElement",
  "MessageEvent",
  "HtmlCanvasElement",
  "CanvasRenderingContext2d"
]